[package]
name = "microkelvin"
version = "0.16.0-rkyv.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
keywords = ["datastructures"]
description = "A library for tree traversal over annotated datastructures"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
rend = { version = "0.3.6", default_features = false }
parking_lot = { version = "0.11.2", optional = true }
rkyv = { version = "0.7.29", default_features = false, features = ["size_32", "archive_le", "validation"] }
memmap = { version = "0.7.0", optional = true }
bytecheck = { version = "0.6.7", default_features = false }

[dev-dependencies]
rand = "0.8.4"
tempfile = "3.3.0"

[features]
default = ["host"]
host = ["parking_lot", "memmap"]

