[package]
name = "microkelvin"
description = "A crate for tree traversal over annotated data structures"
categories = ["data-structures", "no-std"]
keywords = ["tree", "traversal", "annotation", "data", "structure"]

repository = "https://github.com/dusk-network/microkelvin"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
    "Eduardo Leegwater Simões <eduardo@dusk.network>"
]
version = "0.17.0"

edition = "2021"
license = "MPL-2.0"

exclude = [".github/*", ".gitignore"]

[dependencies]
ranno = { git = "https://github.com/dusk-network/ranno", tag = "v0.0.0-hatchery" }
